refactor: 完全移除 Lombok 依赖并重构代码
- 移除 pom.xml 中的 lombok 和 lombok-mapstruct-binding 依赖
- 替换所有 @Getter/@Setter 注解为手动生成的 getter/setter 方法
- 移除 @UtilityClass 注解，将工具类方法改为静态
- 修复所有相关的编译错误和方法引用问题
- 确保 22 个模块全部编译通过

🤖 Generated with [Claude Code](https://claude.com/claude-code)

Co-Authored-By: Claude <noreply@anthropic.com>